Last modified-highlights

--- a/templates/pred.html
+++ b/templates/pred.html
@@ -41,23 +41,25 @@
 
 <section id="section10">
     <div class="container">
-            <h1>PREDICTIONS</h1>
+            <center><h1>PREDICTIONS</h1></center>
             <div class="doc">
                 <section id="menu1">
                     <a href="#menu1">CRIME AGAINST WOMEN</a>
-                    <p>The women sector is very prone to be the victims of most of the crimes taking place in India. Following predictions are categorized according to the years of occurence. Please select the desired option to view the results.The notion that acts such as murder, rape and theft are to be prohibited exists worldwide.[5] What precisely is a criminal offence is defined by criminal law of each country. While many have a catalogue of crimes called the criminal code, in some common law countries no such comprehensive statute exists.
+                    
 
-                        The state (government) has the power to severely restrict one's liberty for committing a crime. In modern societies, there are procedures to which investigations and trials must adhere. If found guilty, an offender may be sentenced to a form of reparation such as a community sentence, or, depending on the nature of their offence, to undergo imprisonment, life imprisonment or, in some jurisdictions, execution.</p>
+                        
                     <center>
 		  	                <form action="women.html" method="POST">
-                            <h3 style = "font-family:verdana; padding-left: 0%;float: left;">Choose Year of Prediction:-</h3>
+                            <h3 style = "font-family:verdana; padding-left: 0%; text-align:left">Select the year, crime type and state of your choice for appropriate predictions:</h3><br>
+                            
                             <select name = "Predict_Year" style="padding-top:20px;">
                                 <option value="2017"><h2>2017</h2> </option>
                                 <option value="2018"><h2>2018</h2> </option>
                                 <option value="2019"><h2>2019</h2> </option>
                                 <option value="2020"><h2>2020</h2> </option>
                             </select>
-
+                            <br>
+                            
                             <select name = "C_Type" style="padding-top:20px;">
                                 <option value="RAPE"><h2>RAPE</h2> </option>
                                 <option value="KIDNAPPING & ABDUCTION"><h2>KIDNAPPING & ABDUCTION</h2> </option>
@@ -69,7 +71,8 @@
                                 <option value="INDECENT REPRESENTATION OF WOMEN(PREVENTION)ACT"><h2>INDECENT REPRESENTATION OF WOMEN(PREVENTION)ACT</h2> </option>    
                                 <option value="TOTAL CRIMES AGAINST WOMEN"><h2>TOTAL CRIMES AGAINST WOMEN</h2> </option> 
                             </select>
-
+                            <br>
+                            
                             <select name = "state" style="padding-top:20px;">
                                 <option value="INDIA"><h2>*INDIA*</h2> </option>
                                 <option value="Andhra Pradesh"><h2>Andhra Pradesh</h2> </option>
@@ -118,12 +121,10 @@
             
                 <section id="menu2">
                     <a href="#menu2">CRIME AGAINST CHILDREN</a>
-                    <p>The children sector is very prone to be the victims of most of the crimes taking place in India. Following predictions are categorized according to the years of occurence. Please select the desired option to view the results.The notion that acts such as murder, rape and theft are to be prohibited exists worldwide.[5] What precisely is a criminal offence is defined by criminal law of each country. While many have a catalogue of crimes called the criminal code, in some common law countries no such comprehensive statute exists.
-
-                        The state (government) has the power to severely restrict one's liberty for committing a crime. In modern societies, there are procedures to which investigations and trials must adhere. If found guilty, an offender may be sentenced to a form of reparation such as a community sentence, or, depending on the nature of their offence, to undergo imprisonment, life imprisonment or, in some jurisdictions, execution.</p>
+                    
                         <center>
                                 <form action="children.html" method="POST">
-                              <h3 style = "font-family:verdana; padding-left: 0%;float: left;">Choose Year of Prediction:-</h3>
+                                        <h3 style = "font-family:verdana; padding-left: 0%; text-align:left">Select the year, crime type and state of your choice for appropriate predictions:</h3><br>
   
                               <select name = "Predict_Year" style="padding-top:20px;">
                                 <option value="2017"><h2>2017</h2> </option>
@@ -132,8 +133,8 @@
                                 <option value="2020"><h2>2020</h2> </option>                              
                             </select>
                             <br>
+                            
                             <select name = "C_Type" style="padding-top:20px;">
-                                
                                 <option value="INFANTICIDE"><h2>INFANTICIDE</h2> </option>
                                 <option value="MURDER"><h2>MURDER</h2> </option>
                                 <option value="RAPE"><h2>RAPE</h2> </option>
@@ -148,6 +149,7 @@
                                 <option value="OTHER CRIMES"><h2>OTHER CRIMES</h2> </option>
                                 <option value="TOTAL CRIMES AGAINST CHILDREN"><h2>TOTAL CRIMES AGAINST CHILDREN</h2> </option>
                             </select>
+                            <br>
 
                             <select name = "state" style="padding-top:20px;">
                                 <option value="INDIA"><h2>*INDIA*</h2> </option>
@@ -186,8 +188,8 @@
                                 <option value="Delhi UT"><h2>Delhi UT</h2> </option>
                                 <option value="Lakshadweep"><h2>Lakshadweep</h2> </option>
                                 <option value="Puducherry"><h2>Puducherry</h2> </option>
-
-                                </select>
+                            </select>
+                            <br>
 
                                 <input type="submit" value="Submit">
                               </form>
@@ -198,12 +200,10 @@
             
                 <section id="menu4">
                     <a href="#menu4">IPC CRIMES</a>
-                    <p>The women sector is very prone to be the victims of most of the crimes taking place in India. Following predictions are categorized according to the years of occurence. Please select the desired option to view the results.The notion that acts such as murder, rape and theft are to be prohibited exists worldwide.[5] What precisely is a criminal offence is defined by criminal law of each country. While many have a catalogue of crimes called the criminal code, in some common law countries no such comprehensive statute exists.
-
-                        The state (government) has the power to severely restrict one's liberty for committing a crime. In modern societies, there are procedures to which investigations and trials must adhere. If found guilty, an offender may be sentenced to a form of reparation such as a community sentence, or, depending on the nature of their offence, to undergo imprisonment, life imprisonment or, in some jurisdictions, execution.</p>
+                    
                         <center>
                               <form action="ipc.html" method="POST">
-                              <h3 style = "font-family:verdana; padding-left: 0%;float: left;">Choose Year of Prediction:-</h3>
+                                    <h3 style = "font-family:verdana; padding-left: 0%; text-align:left">Select the year, crime type and state of your choice for appropriate predictions:</h3><br>
   
                               <select name = "Predict_Year" style="padding-top:20px;">
                                 <option value="2017"><h2>2017</h2> </option>
@@ -211,6 +211,7 @@
                                 <option value="2019"><h2>2019</h2> </option>
                                 <option value="2020"><h2>2020</h2> </option>
                               </select>
+                              <br>
 
                             <select name = "C_Type" style="padding-top:20px;">
                                 <option value="MURDER"><h2>MURDER</h2> </option>
@@ -237,6 +238,7 @@
                                 <option value="OTHER IPC CRIMES"><h2>OTHER IPC CRIMES</h2> </option>    
                                 <option value="TOTAL IPC CRIMES"><h2>TOTAL IPC CRIMES</h2> </option> 
                             </select>
+                            <br>
 
                             <select name = "state" style="padding-top:20px;">
                                 <option value="INDIA"><h2>*INDIA*</h2> </option>
@@ -275,7 +277,6 @@
                                 <option value="Delhi UT"><h2>Delhi UT</h2> </option>
                                 <option value="Lakshadweep"><h2>Lakshadweep</h2> </option>
                                 <option value="Puducherry"><h2>Puducherry</h2> </option>
-
                                 </select>
                                 <br>
                                 <input type="submit" value="Submit">
@@ -285,12 +286,10 @@
             
                 <section id="menu5">
                     <a href="#menu5">SLL CRIMES</a>
-                    <p>The women sector is very prone to be the victims of most of the crimes taking place in India. Following predictions are categorized according to the years of occurence. Please select the desired option to view the results.The notion that acts such as murder, rape and theft are to be prohibited exists worldwide.[5] What precisely is a criminal offence is defined by criminal law of each country. While many have a catalogue of crimes called the criminal code, in some common law countries no such comprehensive statute exists.
-
-                        The state (government) has the power to severely restrict one's liberty for committing a crime. In modern societies, there are procedures to which investigations and trials must adhere. If found guilty, an offender may be sentenced to a form of reparation such as a community sentence, or, depending on the nature of their offence, to undergo imprisonment, life imprisonment or, in some jurisdictions, execution.</p>
+                    
                         <center>
                                 <form action="sll.html" method="POST">
-                              <h3 style = "font-family:verdana; padding-left: 0%;float: left;">Choose Year of Prediction:-</h3>
+                                        <h3 style = "font-family:verdana; padding-left: 0%; text-align:left">Select the year, crime type and state of your choice for appropriate predictions:</h3><br>
   
                               <select name = "Predict_Year" style="padding-top:20px;">
                               <option value="2017"><h2>2017</h2> </option>
@@ -298,6 +297,7 @@
                               <option value="2019"><h2>2019</h2> </option>
                               <option value="2020"><h2>2020</h2> </option>
                               </select>
+                              <br>
 
                               <select name = "C_Type" style="padding-top:20px;">
                                 <option value="ARMS ACT, 1959"><h2>ARMS ACT, 1959</h2> </option>
@@ -323,7 +323,7 @@
                                 <option value="OTHER IPC CRIMES"><h2>OTHER SLL CRIMES</h2> </option>    
                                 <option value="TOTAL IPC CRIMES"><h2>TOTAL SLL CRIMES</h2> </option> 
                             </select>
-
+                            <br>
                             <select name = "state" style="padding-top:20px;">
                                 <option value="INDIA"><h2>*INDIA*</h2> </option>
                                 <option value="Andhra Pradesh"><h2>Andhra Pradesh</h2> </option>
