--- a/templates/pred.html
+++ b/templates/pred.html
@@ -25,7 +25,7 @@
                     <div class = "box3">
                         <nav>
                             <ul>
-                                <li> <a href="#section8">ABOUT</a> </li> 
+                                <li> <a href="About.html">ABOUT</a> </li> 
                                 <li class="current"><a href="/home.html">HOME</a></li>
                             </ul>              
                         </nav>
@@ -41,7 +41,10 @@
 
 <section id="section10">
     <div class="container">
+        <center>
             <h1>PREDICTIONS</h1>
+        </center>
+            
             <div class="doc">
                 <section id="menu1">
                     <a href="#menu1">CRIME AGAINST WOMEN</a>
@@ -52,6 +55,7 @@
 		  	                <form action="women.html" method="POST">
                             <h3 style = "font-family:verdana; padding-left: 0%;float: left;">Choose Year of Prediction:-</h3>
                             <select name = "Predict_Year" style="padding-top:20px;">
+                                <option value="2016"><h2>Select Year</h2> </option>
                                 <option value="2017"><h2>2017</h2> </option>
                                 <option value="2018"><h2>2018</h2> </option>
                                 <option value="2019"><h2>2019</h2> </option>
@@ -59,6 +63,7 @@
                             </select>
 
                             <select name = "C_Type" style="padding-top:20px;">
+                                <option value="RAPE"><h2>Select Crime Type (Default - Rape)</h2> </option>
                                 <option value="RAPE"><h2>RAPE</h2> </option>
                                 <option value="KIDNAPPING & ABDUCTION"><h2>KIDNAPPING & ABDUCTION</h2> </option>
                                 <option value="DOWRY DEATH"><h2>DOWRY DEATH</h2> </option>
@@ -71,7 +76,8 @@
                             </select>
 
                             <select name = "state" style="padding-top:20px;">
-                                <option value="INDIA"><h2>*INDIA*</h2> </option>
+                                <option value="INDIA"><h2>Select States (Default - ALL STATES)</h2> </option>
+                                <option value="INDIA"><h2>ALL STATES</h2> </option>
                                 <option value="Andhra Pradesh"><h2>Andhra Pradesh</h2> </option>
                                 <option value="Arunachal Pradesh"><h2>Arunachal Pradesh</h2> </option>
                                 <option value="Assam"><h2>Assam</h2> </option>
@@ -126,14 +132,15 @@
                               <h3 style = "font-family:verdana; padding-left: 0%;float: left;">Choose Year of Prediction:-</h3>
   
                               <select name = "Predict_Year" style="padding-top:20px;">
+                                <option value="2016"><h2>Select Year</h2> </option>
                                 <option value="2017"><h2>2017</h2> </option>
                                 <option value="2018"><h2>2018</h2> </option>
                                 <option value="2019"><h2>2019</h2> </option>
                                 <option value="2020"><h2>2020</h2> </option>                              
                             </select>
-                            <br>
+                            <br><br>
                             <select name = "C_Type" style="padding-top:20px;">
-                                
+                                <option value="INFANTICIDE"><h2>Select Crime Type (Default - INFANTICIDE)</h2> </option>
                                 <option value="INFANTICIDE"><h2>INFANTICIDE</h2> </option>
                                 <option value="MURDER"><h2>MURDER</h2> </option>
                                 <option value="RAPE"><h2>RAPE</h2> </option>
@@ -148,9 +155,10 @@
                                 <option value="OTHER CRIMES"><h2>OTHER CRIMES</h2> </option>
                                 <option value="TOTAL CRIMES AGAINST CHILDREN"><h2>TOTAL CRIMES AGAINST CHILDREN</h2> </option>
                             </select>
-
+                            <br>
                             <select name = "state" style="padding-top:20px;">
-                                <option value="INDIA"><h2>*INDIA*</h2> </option>
+                                <option value="INDIA"><h2>Select States (Default - ALL STATES)</h2> </option>
+                                <option value="INDIA"><h2>ALL STATES</h2> </option>
                                 <option value="Andhra Pradesh"><h2>Andhra Pradesh</h2> </option>
                                 <option value="Arunachal Pradesh"><h2>Arunachal Pradesh</h2> </option>
                                 <option value="Assam"><h2>Assam</h2> </option>
@@ -188,7 +196,7 @@
                                 <option value="Puducherry"><h2>Puducherry</h2> </option>
 
                                 </select>
-
+                                <br>
                                 <input type="submit" value="Submit">
                               </form>
                       </center>    
@@ -206,6 +214,7 @@
                               <h3 style = "font-family:verdana; padding-left: 0%;float: left;">Choose Year of Prediction:-</h3>
   
                               <select name = "Predict_Year" style="padding-top:20px;">
+                                <option value="2016"><h2>Select Year</h2> </option>
                                 <option value="2017"><h2>2017</h2> </option>
                                 <option value="2018"><h2>2018</h2> </option>
                                 <option value="2019"><h2>2019</h2> </option>
@@ -213,6 +222,7 @@
                               </select>
 
                             <select name = "C_Type" style="padding-top:20px;">
+                                <option value="MURDER"><h2>Select Crime Type (Default - MURDER)</h2> </option>
                                 <option value="MURDER"><h2>MURDER</h2> </option>
                                 <option value="ATTEMPT TO COMMIT MURDER"><h2>ATTEMPT TO COMMIT MURDER</h2> </option>
                                 <option value="CULPABLE HOMICIDE NOT AMOUNTING TO MURDER"><h2>CULPABLE HOMICIDE NOT AMOUNTING TO MURDER</h2> </option>
@@ -239,7 +249,8 @@
                             </select>
 
                             <select name = "state" style="padding-top:20px;">
-                                <option value="INDIA"><h2>*INDIA*</h2> </option>
+                                <option value="INDIA"><h2>Select States (Default - ALL STATES)</h2> </option>
+                                <option value="INDIA"><h2>ALL STATES</h2> </option>
                                 <option value="Andhra Pradesh"><h2>Andhra Pradesh</h2> </option>
                                 <option value="Arunachal Pradesh"><h2>Arunachal Pradesh</h2> </option>
                                 <option value="Assam"><h2>Assam</h2> </option>
@@ -293,13 +304,15 @@
                               <h3 style = "font-family:verdana; padding-left: 0%;float: left;">Choose Year of Prediction:-</h3>
   
                               <select name = "Predict_Year" style="padding-top:20px;">
-                              <option value="2017"><h2>2017</h2> </option>
-                              <option value="2018"><h2>2018</h2> </option>
-                              <option value="2019"><h2>2019</h2> </option>
-                              <option value="2020"><h2>2020</h2> </option>
+                                <option value="2016"><h2>Select Year</h2> </option>
+                                <option value="2017"><h2>2017</h2> </option>
+                                <option value="2018"><h2>2018</h2> </option>
+                                <option value="2019"><h2>2019</h2> </option>
+                                <option value="2020"><h2>2020</h2> </option>
                               </select>
-
+                              <br><br>
                               <select name = "C_Type" style="padding-top:20px;">
+                                <option value="ARMS ACT, 1959"><h2>Select Crime Type (Default - ARMS ACT, 1959)</h2> </option>
                                 <option value="ARMS ACT, 1959"><h2>ARMS ACT, 1959</h2> </option>
                                 <option value="NARCOTIC DRUGS & PSYCHOTROPIC SUBSTANCES ACT, 1985"><h2>NARCOTIC DRUGS & PSYCHOTROPIC SUBSTANCES ACT, 1985</h2> </option>
                                 <option value="GAMBLING ACT, 1867"><h2>GAMBLING ACT, 1867</h2> </option>
@@ -315,7 +328,6 @@
                                 <option value="ANTIQUITIES & ART TREASURES ACT, 1972"><h2>ANTIQUITIES & ART TREASURES ACT, 1972</h2> </option>
                                 <option value="DOWRY PROHIBITION ACT, 1961"><h2>DOWRY PROHIBITION ACT, 1961</h2> </option>
                                 <option value="PROHIBITION OF CHILD MARRIAGE ACT, 2006"><h2>PROHIBITION OF CHILD MARRIAGE ACT, 2006</h2> </option>
-                                <option value="HURT/GREVIOUS HURT"><h2>HURT/GREVIOUS HURT</h2> </option>
                                 <option value="INDECENT REP. OF WOMEN(P) ACT, 1986"><h2>INDECENT REP. OF WOMEN(P) ACT, 1986</h2> </option>
                                 <option value="COPYRIGHT ACT, 1957"><h2>COPYRIGHT ACT, 1957</h2> </option>
                                 <option value="SC/ST (PREVENTION OF ATTROCITIES) ACT, 1989"><h2>SC/ST (PREVENTION OF ATTROCITIES) ACT, 1989</h2> </option>
@@ -325,7 +337,8 @@
                             </select>
 
                             <select name = "state" style="padding-top:20px;">
-                                <option value="INDIA"><h2>*INDIA*</h2> </option>
+                                <option value="INDIA"><h2>Select States (Default - ALL STATES)</h2> </option>
+                                <option value="INDIA"><h2>ALL STATES</h2> </option>
                                 <option value="Andhra Pradesh"><h2>Andhra Pradesh</h2> </option>
                                 <option value="Arunachal Pradesh"><h2>Arunachal Pradesh</h2> </option>
                                 <option value="Assam"><h2>Assam</h2> </option>
