--- a/templates/women.html
+++ b/templates/women.html
@@ -12,7 +12,7 @@
 
 <body>
 	<center>
-		{{msg}}
+		<center><h3 style="color: red;">{{msg}}</h3></center>
 		<br>
 		<h3>"{{C_type}}" Cases in {{state}} upto Year {{year}}</h3>
 	</center>
@@ -25,19 +25,20 @@
 	var ctx = document.getElementById("myChart").getContext('2d');
 	var counts = {{pred_data}};
 	var years = {{ years|safe }};
-	console.log(counts)
+	var C_type = "{{C_type|safe}}";
+	console.log(C_type)
 	var myChart = new Chart(ctx, {
   	type: 'bar',
   	data: {
         labels:years,
     	   datasets: [{
             type: 'bar',
-            label: 'Rape',
+            label: C_type,
             data: counts,
             backgroundColor: 'grey'
            },{
             type: 'line',
-            label: 'Rape',
+            label: C_type,
             fill: false,
             borderWidth: 4,
             data: counts,
