Final (pre-VIVA)

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
 	<body>
         <header class = "header1">
             <div class = "box1">
-                <img src="{{url_for('static', filename='images/logo_trial.png')}}" height = "115vh" width = "90%" alt="Banner Image"/>
+                <a href="home.html"><img src="{{url_for('static', filename='images/logo_trial.png')}}" height = "115vh" width = "90%" alt="Banner Image"/></a>
             </div>
             <div class = "box2">
                 <h1>Indian <span class="highlight">Crime</span> Analysis</h1>
@@ -60,7 +60,7 @@ Our services, study the trends and demonstrate predictions and visualizations th
         <br>
         <br>
         <center><h1><a href="pred.html">PREDICTIONS</a></h1></center>
-        <img style="float: left;" src="/static/images/predictiveAnalytics.png" class="imgPred" height= 300/>
+        <a href="pred.html"><img style="float: left;" src="/static/images/predictiveAnalytics.png" class="imgPred" height= 300/></a>
         <p style="float: right;">This service uses algorithms to predict the patterns in a number of crime cases for the forthcoming years. The crime sectors covered under this module includes crime against women, children, Indian Penal Code crimes and Special & Local Law crimes. On selecting a particular crime sector, a graphical demonstration of the crime-type, year and state of the user's choice shall be displayed, giving an overview of the areas that are prone to specific types of crimes and the behaviour of such crimes over the years to come.</p>
 
     </div>
@@ -69,7 +69,7 @@ Our services, study the trends and demonstrate predictions and visualizations th
 <section id="section6">
         <div class="container">
                 <center><h1><a href="vis.html">VISUALIZATIONS</a></h1></center>
-                <img src="/static/images/viz2.gif" class="imgViz" height= 300/>
+                <a href="vis.html"><img src="/static/images/viz2.gif" class="imgViz" height= 300/></a>
                 <p>Data visualization technology can bring benefits to almost everyone within the police force. The more police are able to see the big picture, the higher the likelihood of crime getting solved quickly.
                 The public increasingly expects this kind of approach. This module showcases data visuals using illustrative animations to depict the patterns of crime in all the states of India for the past 15 years. Demographic factors such as literacy rates & crime per one lakh people have been considered to give effective definition to the visuals per state.
                 </p>
@@ -79,7 +79,7 @@ Our services, study the trends and demonstrate predictions and visualizations th
 <section id="section7">
         <div class="container">
             <center><h1><a href="highlights.html">HIGHLIGHTS</a></h1></center>
-            <img src="/static/images/statistics.jpg" class="imgStat" height= 300/>
+            <a href="highlights.html"><img src="/static/images/statistics.jpg" class="imgStat" height= 300/></a>
             <p>Analyzing crime and its patterns for predictions and visualizations makes certain observations - supportive or contradictive - very prominent. These observations or facts could be related to the data, algorithms or statistics, that clearly state the viability of both the modules, giving rise to a number of intrinsic changes. This module displays the highlights of these observations achieved during crime analysis.</p>
     
         </div>
