--- a/templates/pred.html
+++ b/templates/pred.html
@@ -17,7 +17,7 @@
 
             <header class = "header1">
                     <div class = "box1">
-                        <img src="{{url_for('static', filename='images/logo_trial.png')}}" height = "115vh" width = "90%" alt="Banner Image"/>
+                        <a href="home.html"><img src="{{url_for('static', filename='images/logo_trial.png')}}" height = "115vh" width = "90%" alt="Banner Image"/></a>
                     </div>
                     <div class = "box2">
                         <h1>Indian <span class="highlight">Crime</span> Analysis</h1>
