--- a/templates/About.html
+++ b/templates/About.html
@@ -52,6 +52,8 @@
         
                 <footer>
                     <p>Indian Crime Analysis, Copyright &copy; 2018</p>
+                    <img src="/static/images/indiagov.png" id="IG">
+
                 </footer>
     </body>
 </html>
