--- a/templates/highlights.html
+++ b/templates/highlights.html
@@ -84,7 +84,9 @@
 
 
         <footer>
-			<p>Crime Prediction System, Copyright &copy; 2018</p>
+            <p>Crime Prediction System, Copyright &copy; 2018</p>
+            <img src="/static/images/indiagov.png" id="IG">
+
 		</footer>
 	</body>
 
