--- a/templates/home.html
+++ b/templates/home.html
@@ -86,7 +86,9 @@ Our services, study the trends and demonstrate predictions and visualizations th
 </section>
 
 <footer>
-			<p>Indian Crime Analysis, Copyright &copy; 2018</p>
+            <p>Indian Crime Analysis, Copyright &copy; 2018</p>
+            <img src="/static/images/indiagov.png" id="IG">
+
 		</footer>
 	</body>
 
