--- a/templates/pred.html
+++ b/templates/pred.html
@@ -69,8 +69,6 @@
                                 <option value="ASSAULT ON WOMEN WITH INTENT TO OUTRAGE HER MODESTY"><h2>ASSAULT ON WOMEN WITH INTENT TO OUTRAGE HER MODESTY</h2> </option>
                                 <option value="INSULT TO THE MODESTY OF WOMEN"><h2>INSULT TO THE MODESTY OF WOMEN</h2> </option>
                                 <option value="CRUELTY BY HUSBAND OR RELATIVES"><h2>CRUELTY BY HUSBAND OR RELATIVES</h2> </option>
-                                <option value="IMMORAL TRAFFIC(PREVENTION)ACT"><h2>IMMORAL TRAFFIC(PREVENTION)ACT</h2> </option>
-                                <option value="INDECENT REPRESENTATION OF WOMEN(PREVENTION)ACT"><h2>INDECENT REPRESENTATION OF WOMEN(PREVENTION)ACT</h2> </option>    
                                 <option value="TOTAL CRIMES AGAINST WOMEN"><h2>TOTAL CRIMES AGAINST WOMEN</h2> </option> 
                             </select>
                             <br>
@@ -385,7 +383,9 @@
 
 
         <footer>
-			<p>Indian Crime Analysis, Copyright &copy; 2018</p>
+            <p>Indian Crime Analysis, Copyright &copy; 2018</p>
+            <img src="/static/images/indiagov.png" id="IG">
+
 		</footer>
 	</body>
 
