--- a/templates/sll.html
+++ b/templates/sll.html
@@ -88,7 +88,9 @@
 
   
 </script>
-
+	{% if(msg == "") %}
+	<center><h3 style="color: crimson">Trend Changing Year: {{TCY}}</h3></center> 
+	{% endif %}
 </body>
 
 </html>
