--- a/templates/vis.html
+++ b/templates/vis.html
@@ -68,7 +68,9 @@
 
 
         <footer>
-			<p>Indian Crime Analysis, Copyright &copy; 2018</p>
+            <p>Indian Crime Analysis, Copyright &copy; 2018</p>
+            <img src="/static/images/indiagov.png" id="IG">
+
 		</footer>
 	</body>
 
