--- a/templates/pred.html
+++ b/templates/pred.html
@@ -218,7 +218,7 @@
                                 <option value="MURDER"><h2>Select Crime Type (Default - MURDER)</h2> </option>
                                 <option value="MURDER"><h2>MURDER</h2> </option>
                                 <option value="ATTEMPT TO COMMIT MURDER"><h2>ATTEMPT TO COMMIT MURDER</h2> </option>
-                                <option value="CULPABLE HOMICIDE NOT AMOUNTING TO MURDER"><h2>CULPABLE HOMICIDE NOT AMOUNTING TO MURDER</h2> </option>
+                                <option value="C.H. NOT AMOUNTING TO MURDER"><h2>CULPABLE HOMICIDE NOT AMOUNTING TO MURDER</h2> </option>
                                 <option value="RAPE"><h2>RAPE</h2> </option>
                                 <option value="KIDNAPPING and ABDUCTION"><h2>KIDNAPPING & ABDUCTION</h2> </option>
                                 <option value="DACOITY"><h2>DACOITY</h2> </option>
@@ -277,7 +277,7 @@
                                 <option value="Chandigarh"><h2>Chandigarh</h2> </option>
                                 <option value="D&N Haveli"><h2>D&N Haveli</h2> </option>
                                 <option value="Daman & Diu"><h2>Daman & Diu</h2> </option>
-                                <option value="Delhi UT"><h2>Delhi UT</h2> </option>
+                                <option value="Delhi"><h2>Delhi UT</h2> </option>
                                 <option value="Lakshadweep"><h2>Lakshadweep</h2> </option>
                                 <option value="Puducherry"><h2>Puducherry</h2> </option>
                                 </select>
