--- a/templates/pred.html
+++ b/templates/pred.html
@@ -66,7 +66,7 @@
                                 <option value="RAPE"><h2>RAPE</h2> </option>
                                 <option value="KIDNAPPING & ABDUCTION"><h2>KIDNAPPING & ABDUCTION</h2> </option>
                                 <option value="DOWRY DEATH"><h2>DOWRY DEATH</h2> </option>
-                                <option value="ASSAULT ON WOMEN WITH INTENT TO OUTRAGE HER MODESTY"><h2>ASSAULT ON WOMEN WITH INTENT TO OUTRAGE HER MODESTY</h2> </option>
+                                <option value="ASSAULT ON WOMEN WITH INTENT TO OUTRAGE HER MODESTY"><h2>ASSAULT ON WOMEN</h2> </option>
                                 <option value="INSULT TO THE MODESTY OF WOMEN"><h2>INSULT TO THE MODESTY OF WOMEN</h2> </option>
                                 <option value="CRUELTY BY HUSBAND OR RELATIVES"><h2>CRUELTY BY HUSBAND OR RELATIVES</h2> </option>
                                 <option value="TOTAL CRIMES AGAINST WOMEN"><h2>TOTAL CRIMES AGAINST WOMEN</h2> </option> 
@@ -233,7 +233,7 @@
                                 <option value="ARSON"><h2>ARSON</h2> </option>
                                 <option value="HURT/GREVIOUS HURT"><h2>HURT/GREVIOUS HURT</h2> </option>
                                 <option value="DOWRY"><h2>DOWRY</h2> </option>
-                                <option value="ASSAULT ON WOMEN WITH INTENT TO OUTRAGE HER MODESTY"><h2>ASSAULT ON WOMEN WITH INTENT TO OUTRAGE HER MODESTY</h2> </option>
+                                <option value="ASSAULT ON WOMEN"><h2>ASSAULT ON WOMEN WITH INTENT TO OUTRAGE HER MODESTY</h2> </option>
                                 <option value="INSULT TO THE MODESTY OF WOMEN"><h2>INSULT TO THE MODESTY OF WOMEN</h2> </option>
                                 <option value="CRUELTY BY HUSBAND OR HIS RELATIVES"><h2>CRUELTY BY HUSBAND OR HIS RELATIVES</h2> </option>
                                 <option value="CAUSING DEATH BY NEGLIGENCE"><h2>CAUSING DEATH BY NEGLIGENCE</h2> </option>
