--- a/templates/pred.html
+++ b/templates/pred.html
@@ -324,8 +324,8 @@
                                 <option value="COPYRIGHT ACT, 1957"><h2>COPYRIGHT ACT, 1957</h2> </option>
                                 <option value="SC/ST (PREVENTION OF ATTROCITIES) ACT, 1989"><h2>SC/ST (PREVENTION OF ATTROCITIES) ACT, 1989</h2> </option>
                                 <option value="FOREST ACT, 1927"><h2>FOREST ACT, 1927</h2> </option>
-                                <option value="OTHER IPC CRIMES"><h2>OTHER SLL CRIMES</h2> </option>    
-                                <option value="TOTAL IPC CRIMES"><h2>TOTAL SLL CRIMES</h2> </option> 
+                                <option value="OTHER SLL CRIMES"><h2>OTHER SLL CRIMES</h2> </option>    
+                                <option value="TOTAL SLL CRIMES"><h2>TOTAL SLL CRIMES</h2> </option> 
                             </select>
                             <br>
                             <select name = "state" style="padding-top:20px;">
@@ -363,7 +363,7 @@
                                 <option value="Chandigarh"><h2>Chandigarh</h2> </option>
                                 <option value="D&N Haveli"><h2>D&N Haveli</h2> </option>
                                 <option value="Daman & Diu"><h2>Daman & Diu</h2> </option>
-                                <option value="Delhi UT"><h2>Delhi UT</h2> </option>
+                                <option value="Delhi"><h2>Delhi UT</h2> </option>
                                 <option value="Lakshadweep"><h2>Lakshadweep</h2> </option>
                                 <option value="Puducherry"><h2>Puducherry</h2> </option>
 
