--- a/templates/pred.html
+++ b/templates/pred.html
@@ -335,7 +335,7 @@
                                 <option value="Arunachal Pradesh"><h2>Arunachal Pradesh</h2> </option>
                                 <option value="Assam"><h2>Assam</h2> </option>
                                 <option value="Bihar"><h2>Bihar</h2> </option>
-                                <option value="Chhattisgarh"><h2>Chhattisgarh</h2> </option>
+                                <option value="Chattisgarh"><h2>Chhattisgarh</h2> </option>
                                 <option value="Goa"><h2>Goa</h2> </option>
                                 <option value="Gujarat"><h2>Gujarat</h2> </option>
                                 <option value="Haryana"><h2>Haryana</h2> </option>
